--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-
+            site d'hebergement
         </title>
         <meta charset="UTF-8">
         <link  rel="stylesheet" media="screen and (min-width: 992px)"   href="css\style.css">
